--- a/config/player.config
+++ b/config/player.config
@@ -1,7 +1,14 @@
 [player]
 player_name = xixi
-player_
-player_
-player_
-player_
-player_
+player_blood = 100
+player_mana = 100
+player_attack = 10
+player_strength = 10
+player_agile = 10
+player_intelligence = 10
+player_physique = 10
+player_criticalChance = 10
+player_skillInjuryRate = 1
+player_defenses = 10
+player_experience = 0
+player_level = 1
