完善人物模型v1.1 战斗血量未完成

--- a/config/player.config
+++ b/config/player.config
@@ -7,8 +7,8 @@ player_strength = 10
 player_agile = 10
 player_intelligence = 10
 player_physique = 10
+player_speed = 10
 player_criticalChance = 10
-player_skillInjuryRate = 1
 player_defenses = 10
 player_experience = 0
 player_level = 1
