--- a/config/monster.config
+++ b/config/monster.config
@@ -1,9 +1,21 @@
 [monster_lv1]
 monster_name = monster_lv1
-monster_blood = 200
-monster_attack = 10
+monster_blood = 50
+monster_attack = 25
 monster_speed = 15
 monster_criticalChance = 10
 monster_skillInjuryRate = 1
-monster_defenses = 20
+monster_defenses = 15
 monster_level = 1
+monster_exe = 100
+
+[monster_lv2]
+monster_name = monster_lv2
+monster_blood = 55
+monster_attack = 28
+monster_speed = 17
+monster_criticalChance = 10
+monster_skillInjuryRate = 1
+monster_defenses = 17
+monster_level = 2
+monster_exe = 150
