完成: 背包系统和装备系统 未完成: 地图

--- a/config/backpack.config
+++ b/config/backpack.config
@@ -1,10 +1,10 @@
 [BackpackBar_1]
-equip =
+equipid = 1
 [BackpackBar_2]
-equip =
+equipid = 2
 [BackpackBar_3]
-equip =
+equipid = 3
 [BackpackBar_4]
-equip =
+equipid = 4
 [BackpackBar_5]
-equip =
+equipid = 5
