--- a/config/equip.config
+++ b/config/equip.config
@@ -1,3 +1,69 @@
 [equip_1]
-name = changjian
-attack = 30
+equip_id = 1
+equip_name = changjian
+equip_level = 1
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_2]
+equip_id = 2
+equip_name = changjian
+equip_level = 1
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_3]
+equip_id = 3
+equip_name = changjian
+equip_level = 1
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_4]
+equip_id = 4
+equip_name = changjian
+equip_level = 1
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_5]
+equip_id = 5
+equip_name = changjian
+equip_level = 1
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
