完成: 背包系统和装备系统 未完成: 地图

--- a/config/equip.config
+++ b/config/equip.config
@@ -1,6 +1,6 @@
 [equip_1]
 equip_id = 1
-equip_name = changjian
+equip_name = 武器
 equip_level = 1
 equip_attack = 30
 equip_strength = 10
@@ -14,7 +14,7 @@ equip_defenses = 0
 
 [equip_2]
 equip_id = 2
-equip_name = changjian
+equip_name = 衣服
 equip_level = 1
 equip_attack = 30
 equip_strength = 10
@@ -28,7 +28,7 @@ equip_defenses = 0
 
 [equip_3]
 equip_id = 3
-equip_name = changjian
+equip_name = 帽子
 equip_level = 1
 equip_attack = 30
 equip_strength = 10
@@ -42,7 +42,7 @@ equip_defenses = 0
 
 [equip_4]
 equip_id = 4
-equip_name = changjian
+equip_name = 鞋子
 equip_level = 1
 equip_attack = 30
 equip_strength = 10
@@ -56,7 +56,7 @@ equip_defenses = 0
 
 [equip_5]
 equip_id = 5
-equip_name = changjian
+equip_name = 裤子
 equip_level = 1
 equip_attack = 30
 equip_strength = 10
