完成: 装备掉落 未完成: 地图

--- a/config/backpack.config
+++ b/config/backpack.config
@@ -1,10 +1,35 @@
 [BackpackBar_1]
-equipid = 1
+equipid =
 [BackpackBar_2]
-equipid = 2
+equipid =
 [BackpackBar_3]
-equipid = 3
+equipid =
 [BackpackBar_4]
-equipid = 4
+equipid =
 [BackpackBar_5]
-equipid = 5
+equipid =
+
+[BackpackBar_6]
+equipid =
+[BackpackBar_7]
+equipid =
+[BackpackBar_8]
+equipid =
+[BackpackBar_9]
+equipid =
+[BackpackBar_10]
+equipid =
+
+[BackpackBar_11]
+equipid =
+[BackpackBar_12]
+equipid =
+[BackpackBar_13]
+equipid =
+[BackpackBar_14]
+equipid =
+[BackpackBar_15]
+equipid =
+
+[BackpackBar_16]
+equipid =
