--- a/config/equip.config
+++ b/config/equip.config
@@ -1,7 +1,21 @@
+[equip_]
+equip_id = 0
+equip_name = 无
+equip_quality = 0
+equip_attack = 0
+equip_strength = 0
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
 [equip_1]
 equip_id = 1
 equip_name = 武器
-equip_level = 1
+equip_quality = 白色
 equip_attack = 30
 equip_strength = 10
 equip_agile = 0
@@ -15,7 +29,7 @@ equip_defenses = 0
 [equip_2]
 equip_id = 2
 equip_name = 衣服
-equip_level = 1
+equip_quality = 白色
 equip_attack = 30
 equip_strength = 10
 equip_agile = 0
@@ -29,7 +43,7 @@ equip_defenses = 0
 [equip_3]
 equip_id = 3
 equip_name = 帽子
-equip_level = 1
+equip_quality = 白色
 equip_attack = 30
 equip_strength = 10
 equip_agile = 0
@@ -43,7 +57,7 @@ equip_defenses = 0
 [equip_4]
 equip_id = 4
 equip_name = 鞋子
-equip_level = 1
+equip_quality = 白色
 equip_attack = 30
 equip_strength = 10
 equip_agile = 0
@@ -57,7 +71,287 @@ equip_defenses = 0
 [equip_5]
 equip_id = 5
 equip_name = 裤子
-equip_level = 1
+equip_quality = 白色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_6]
+equip_id = 6
+equip_name = 武器
+equip_quality = 蓝色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_7]
+equip_id = 7
+equip_name = 衣服
+equip_quality = 蓝色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_8]
+equip_id = 8
+equip_name = 帽子
+equip_quality = 蓝色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_9]
+equip_id = 9
+equip_name = 鞋子
+equip_quality = 蓝色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_10]
+equip_id = 10
+equip_name = 裤子
+equip_quality = 蓝色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_11]
+equip_id = 11
+equip_name = 武器
+equip_quality = 紫色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_12]
+equip_id = 12
+equip_name = 衣服
+equip_quality = 紫色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_13]
+equip_id = 13
+equip_name = 帽子
+equip_quality = 紫色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_14]
+equip_id = 14
+equip_name = 鞋子
+equip_quality = 紫色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_15]
+equip_id = 15
+equip_name = 裤子
+equip_quality = 紫色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_16]
+equip_id = 16
+equip_name = 武器
+equip_quality = 金色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_17]
+equip_id = 17
+equip_name = 衣服
+equip_quality = 金色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_18]
+equip_id = 18
+equip_name = 帽子
+equip_quality = 金色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_19]
+equip_id = 19
+equip_name = 鞋子
+equip_quality = 金色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_20]
+equip_id = 20
+equip_name = 裤子
+equip_quality = 金色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_21]
+equip_id = 21
+equip_name = 武器
+equip_quality = 红色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_22]
+equip_id = 22
+equip_name = 衣服
+equip_quality = 红色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_23]
+equip_id = 23
+equip_name = 帽子
+equip_quality = 红色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_24]
+equip_id = 24
+equip_name = 鞋子
+equip_quality = 红色
+equip_attack = 30
+equip_strength = 10
+equip_agile = 0
+equip_intelligence = 0
+equip_physique = 0
+equip_speed = 0
+equip_blood = 0
+equip_mana = 0
+equip_defenses = 0
+
+[equip_25]
+equip_id = 25
+equip_name = 裤子
+equip_quality = 红色
 equip_attack = 30
 equip_strength = 10
 equip_agile = 0
